# esp32_car_display

./: .gitignore  README.MD  sdkconfig  sdkconfig.old
DOCS/: golf3_kwp1281_blocks.md
components/kwp1281/src/: KLineKWP1281Lib_ESP32.cpp  OBD_fault_code_description_RO.h  fault_code_description_PL.h  fault_code_elaboration_RO.h  text_table_RO.h  units.h
esp32_C6_head_node/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32_C6_head_node/DOCS/: l9637_obd_wiring.md
esp32_C6_head_node/components/kwp1281/: CMakeLists.txt
esp32_C6_head_node/components/kwp1281/src/: KLineKWP1281Lib_ESP32.cpp  KLineKWP1281Lib_ESP32.h  (+12 more)
esp32_C6_head_node/main/: CMakeLists.txt  app_main.cpp  ble_service.cpp  device_service.hpp  idf_component.yml  kline_service.cpp  kline_service.hpp  kline_uart.cpp  lcd_panel_st7789t.c  lcd_panel_st7789t.h  lvgl_port.cpp  lvgl_port.hpp  metric_catalog.hpp  state.hpp  ui_service.hpp  waveshare_147.cpp  waveshare_147.hpp
esp32_H2_controller/: .gitignore  CMakeLists.txt  README.MD  sdkconfig.defaults
esp32_H2_controller/main/: CMakeLists.txt  app_main.cpp  ble_central_service.cpp  ble_central_service.hpp
esp32_logic_analyzer/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp32_logic_analyzer/main/: CMakeLists.txt  main.c  sump_tcp_server.c  sump_tcp_server.h
main/: CMakeLists.txt  app_main.cpp  ble_service.cpp  ble_service.hpp  device_service.cpp  display_service.cpp  display_service.hpp  kline_service.cpp  kline_uart.cpp  kline_uart.hpp  metric_catalog.cpp  state.cpp  state.hpp  ui_service.cpp  waveshare_147.cpp
(+13 files in other folders)
